crates/metaxy-cli/tests/snapshots/vue__snapshot_vue_streams_only.snap
---
source: crates/metaxy-cli/tests/vue.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

import { ref, computed, watch, onScopeDispose, type Ref, type ComputedRef } from "vue";

import { type RpcClient, RpcError, type CallOptions } from "./rpc-client";

import type { Procedures } from "./rpc-types";

export { RpcError };
export type { RpcClient, CallOptions, Procedures };

type StreamKey = keyof Procedures["streams"];
type StreamInput<K extends StreamKey> = Procedures["streams"][K]["input"];
type StreamOutput<K extends StreamKey> = Procedures["streams"][K]["output"];

type VoidStreamKey = "events";
type NonVoidStreamKey = "chat";

export interface StreamOptions<K extends StreamKey> {
  callOptions?: CallOptions;
  onChunk?: (chunk: StreamOutput<K>) => void;
  onDone?: () => void;
  onError?: (error: RpcError) => void;
}

export interface StreamResult<K extends StreamKey> {
  readonly chunks: Ref<StreamOutput<K>[]>;
  readonly error: Ref<RpcError | undefined>;
  readonly isStreaming: Ref<boolean>;
  readonly isDone: Ref<boolean>;
  start: () => void;
  stop: () => void;
}

const VOID_STREAM_KEYS: Set<StreamKey> = new Set(["events"]);

export function useStream<K extends "events">(client: RpcClient, key: K, options?: StreamOptions<K>): StreamResult<K>;
export function useStream<K extends "chat">(client: RpcClient, key: K, input: () => StreamInput<K>, options?: StreamOptions<K>): StreamResult<K>;
export function useStream<K extends StreamKey>(
  client: RpcClient,
  ...args: unknown[]
): StreamResult<K> {
  const key = args[0] as K;

  let inputFn: (() => StreamInput<K>) | undefined;
  let options: StreamOptions<K> | undefined;

  if (typeof args[1] === "function") {
    inputFn = args[1] as () => StreamInput<K>;
    options = args[2] as StreamOptions<K> | undefined;
  } else if (typeof args[1] === "object" && args[1] !== null && !VOID_STREAM_KEYS.has(key)) {
    inputFn = () => args[1] as StreamInput<K>;
    options = args[2] as StreamOptions<K> | undefined;
  } else {
    options = args[1] as StreamOptions<K> | undefined;
  }

  const chunks = ref<StreamOutput<K>[]>([]) as Ref<StreamOutput<K>[]>;
  const error = ref<RpcError | undefined>();
  const isStreaming = ref(false);
  const isDone = ref(false);
  let controller: AbortController | undefined;

  function stop() {
    if (controller) {
      controller.abort();
      controller = undefined;
    }
  }

  async function run() {
    stop();
    controller = new AbortController();
    chunks.value = [];
    error.value = undefined;
    isStreaming.value = true;
    isDone.value = false;

    try {
      const callArgs: unknown[] = [key];
      const input = inputFn?.();
      if (input !== undefined) callArgs.push(input);
      const mergedCallOptions = { ...options?.callOptions, signal: controller.signal };
      callArgs.push(mergedCallOptions);
      const gen = (client.stream as (...a: unknown[]) => AsyncGenerator<unknown>)(...callArgs);
      for await (const chunk of gen) {
        if (controller.signal.aborted) break;
        chunks.value = [...chunks.value, chunk as StreamOutput<K>];
        options?.onChunk?.(chunk as StreamOutput<K>);
      }
      if (!controller.signal.aborted) {
        isDone.value = true;
        options?.onDone?.();
      }
    } catch (e) {
      if (!controller.signal.aborted) {
        error.value = e as RpcError;
        options?.onError?.(error.value);
      }
    } finally {
      isStreaming.value = false;
    }
  }

  onScopeDispose(stop);

  return { chunks, error, isStreaming, isDone, start: () => { void run(); }, stop };
}
